--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.9",
     "concurrently": "^8.2.0",
+    "prisma": "^5.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
