--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.2.0",
     "argon2": "^0.31.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
