--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsnd --respawn --poll --transpile-only index.ts",
+    "migrate": "npx prisma migrate dev",
     "build": "npx tsc",
     "start": "node dist/index.js"
   },
