--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "build": "npx tsc",
     "start": "node dist/index.js"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "type": "commonjs",
   "author": "",
   "license": "ISC",
@@ -29,7 +32,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.4.9",
+    "@types/node": "^20.5.7",
     "concurrently": "^8.2.0",
     "prisma": "^5.1.1",
     "ts-node-dev": "^2.0.0",
