--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "http-status-codes": "^2.2.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
