--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,9 @@ services:
       - 8080:3000
     volumes:
       - ./frontend:/app
-    command: sh -c "cd /app && npm install && npm start"
       # - /app/node_modules
+    working_dir: /app
+    command: sh -c "npm install && npm start"
     networks:
       - app_network
 
@@ -26,8 +27,9 @@ services:
       - 8081:3000
     volumes:
       - ./backend:/app
-    command: sh -c "cd /app && npm install && npm run dev"
       # - /app/node_modules
+    working_dir: /app
+    command: sh -c "npm install -f && npm run dev"
     networks:
       - app_network
 
