--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   },
